	  the STM32 F1 USB device driver by David Sidrane (2013-11-7).
	* configs/spark/composite/cdc-acm.inf:  Windows CDC/ACM driver
	  provided by David Sidrane (2013-11-7).
	* configs/spark/usbserial.c:  Add an apps/examples/usbserial
	  configuration for the Spark.  From David Sidran (2013-11-7).
	* arch/arm/src/sama5/sam_ssc.c and .h:  First cut of SAMA5
	  SSC/I2S driver is code complete (2013-11-9).
	* arch/arm/src/stm32 (numerous files):  OTG FS device and host
	  drivers extended so that they can support either the OTG FS
	  peripheral or the OTG HS peripheral (in FS mode).  This was
	  done as a quick way to get USB support on the STM32F429 which
	  has only OTG HS.  From Ken Pettit (2013-11-10).
	* configs/stm32f429i-disco:  Add support for the usbnsh and
	  usbmsc configurations using the OTG HS peripheral in FS mode.
	  From Ken Pettit (2013-11-10)
	* drivers/audio/i2schar.c:  A simple character driver to support I2S
	  accesses.  This driver in its current state is intended only to
	  support I2C testing and would not be appropriate to used for any real
	  driver application. (2013-11-10).
	* arch/arm/src/kl/kl_pwm.c and .h:  PWM driver for the Freescale
	  Kinetis KL family from Alan Carvalho de Assis (2013-11-10).
	* configs/freedom-kl25z:  Add PWM support.  From Alan Carvalho de Assis
	  (2013-11-10).
	* drivers/audio/vs1053:  VS1053 worker thread stack size is now
	  configurable and assigned a name via pthread_setname_np(). From Ken
	  Pettit (2013-11-10).
	* libc/audio/lib_buffer.c:  Moved audio/buffer/c to libc/audio/lib_buffer.c.
	  This file was moved because it contains buffer management functions
	  that must be available to audio applications.  If it was left in the
	  audio/ directory then it would not be available to applications in the
	  NuttX Kernel build (2013-11-10).
	* arch/arm/src/sama5/sam_ssc.c and Kconfig:  Add configurable support
	  for SSC loopback mode (2013-11-10).
